--- a/views/contacto.html
+++ b/views/contacto.html
@@ -107,7 +107,7 @@
 						</select>
 				</div>
 
-				<!-- CAJA DE COMENATIOS -->
+				<!-- CAJA DE COMENTARIOS -->
 
 				<div class="comentarios">
 					<textarea name="" id="" cols="30" rows="10" placeholder="Explícanos que ha pasado"></textarea> 
