--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -2,6 +2,9 @@ body{
 	background-color: map-get($color,primary);
 	width: 100%;
 	display: flex;
+	margin: 0;
+	padding:0;
+	overflow-x: hidden;
 
 	
 }
