--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -2,6 +2,10 @@
 	margin-top: 5rem;
 	margin-bottom: 5rem;
 	overflow-x: hidden;
+	margin-right: 1rem;
+	margin-left: 1rem;
+
+	padding:2rem;
 }
 
 .card-icon{
