--- a/scss/_grids.scss
+++ b/scss/_grids.scss
@@ -1,6 +1,7 @@
 //GRIDS
 .container_contacto{
 	display: grid;
+
 	
 
 	grid-template-columns: 1fr 1fr;
@@ -20,6 +21,7 @@
 
 .container_footer{
 	display: grid;
+	background-color:#FFFFFF;
 
 	grid-template-columns: 1fr 1fr;
 
@@ -36,7 +38,7 @@
 
 		
 
-		grid-template-columns: 1fr;
+		grid-template-columns: 100%;
 		
 		grid-template-rows: 0.2fr 0.3fr 1fr 5rem;
 		//GRID 2x3
@@ -50,15 +52,23 @@
 	}
 
 	.contacto-img{
-		width: 200px;
+		width: 300px;
 		height: auto;
 	}
 
+	.socials_footer{
+		width: 100vw;
+		margin: 0;
+
+	}
+
 	.container_footer{
+		margin: 0;
+
 		display: grid;
 		background-color:#FFFFFF;
 	
-		grid-template-columns:100%;
+		grid-template-columns:100vw;
 
 		grid-template-rows:1fr 1fr;
 
@@ -66,7 +76,7 @@
 		//GRID 2x1
 		grid-template-areas:
 		"title_footer"
-		"socials_footer"
+		"socials_footer";
 	}
 
 
