--- a/views/contacto.html
+++ b/views/contacto.html
@@ -64,11 +64,11 @@
 
 	
 	<div class="contacto-img">
-			<img src="../assets/img/boba-balls.png" class="contacto-img">
+			<img src="../assets/img/contacto.jpg" class="contacto-img">
 	</div>
 
 	<div class="contacto-formulario">
-	  	<h2>Contacto</h2>
+	  	<h2 class="titulo-form">Contacto</h2>
 		<!-- FORMULATIO DE CONTACTO -->
 			<form action="#">
 				<!-- DATOS DEL FORMULARIO -->
@@ -136,8 +136,7 @@
 
 		
        
-	</div>
-	</div>
+	
 
 		
 			
@@ -149,7 +148,7 @@
 
 	<!-- FOOTER -->
 
-	<footer class="footer container_footer">
+	<footer class="footer container_footer ">
 		<div class="title_footer">
 			<h6>Kero Tea</h6>
 		</div>
