--- a/views/about.html
+++ b/views/about.html
@@ -186,7 +186,7 @@
 
 	<!-- FOOTER -->
 
-	<footer class="container-fullwidth footer">
+	<footer class="container-fullwidth footer p-3">
 		<div class="row justify-content-center">
 
 
