Enlace rotos arreglados

--- a/css/style.css
+++ b/css/style.css
@@ -8267,7 +8267,7 @@ hr.rounded {
 
 .contacto-formulario {
   grid-area: form;
-  background-color: #ffb7c5;
+  background-color: #514F16;
   padding: 2rem;
   border-radius: 5rem;
   margin: 1.3rem; }
