--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -12,7 +12,7 @@
 
 .contacto-formulario{
 	grid-area: form;
-	background-color: map-get($color,secondary);
+	background-color: map-get($color,terciary);
 	padding:2rem;
 	border-radius:5rem;
 	margin: 1.3rem;
